# ChaosLab

./: .gitignore  .travis.yml  CMakeLists.txt  ChaosLab.sln  LICENSE  README.md  azure-pipelines.yml
.azure/: azure-pipelines.yml
.github/workflows/: cmake.yml  codeql-analysis.yml  dev.ubuntu.test.yml  dev.ubuntu.yml  test-coverage.yml  ubuntu.gcc.yml
Common/Props/: BuildShaderModule.props
Inception/ChaosCV/: CMakeLists.txt  ChaosCV.vcxitems  ChaosCV.vcxitems.filters
Inception/ChaosCV/dnn/dnn/: layer_declaration.cpp
Inception/ChaosCV/include/core/: allocator.hpp  array.hpp  buffer.hpp  command.hpp  core.hpp  def.hpp  file.hpp  gpu.hpp  inputs.hpp  io.hpp  log.hpp  op.hpp  pipeline.hpp  pipeline_cache.hpp  tensor.hpp  types.hpp  vulkan.hpp
Inception/ChaosCV/include/dnn/: blob.hpp  flow.hpp  layer.hpp  layer_factory.hpp  net.hpp  option.hpp
Inception/ChaosCV/include/dnn/layers/: abs.hpp  back_subst.hpp  backsubst.hpp  binary_op.hpp  cross.hpp  data.hpp  decomp.hpp  diag.hpp  dot.hpp  eltwise.hpp  gemm.hpp  invert.hpp  lup.hpp  mean.hpp  noop.hpp  norm.hpp  normalize.hpp  permute.hpp  reduce.hpp  relu.hpp  std.hpp  sum.hpp  svd.hpp  var.hpp
Inception/ChaosCV/include/dnn/layers/vulkan/: abs_vulkan.hpp  binary_op_vulkan.hpp  gemm_vulkan.hpp  permute_vulkan.hpp  reduce_vulkan.hpp  sum_vulkan.hpp
Inception/ChaosCV/include/highgui/: highgui.hpp  painter.hpp  window.hpp
Inception/ChaosCV/include/ml/: pca.hpp  sfa.hpp
Inception/ChaosCV/include/utils/: op.hpp
Inception/ChaosCV/src/core/: allocator.cpp  array.cpp  command.cpp  core.cpp  file.cpp  gpu.cpp  io.cpp  log.cpp  pipeline.cpp  tensor.cpp  types.cpp
Inception/ChaosCV/src/dnn/: blob.cpp  flow.cpp  layer.cpp  layer_declaration.cpp  net.cpp  option.cpp
Inception/ChaosCV/src/dnn/layers/: abs.cpp  back_subst.cpp  backsubst.cpp  binary_op.cpp  cross.cpp  data.cpp  diag.cpp  dot.cpp  eigen.cpp  gemm.cpp  invert.cpp  lup.cpp  mean.cpp  net.cpp  noop.cpp  norm.cpp  normalize.cpp  permute.cpp  premute.cpp  reduce.cpp  std.cpp  sum.cpp  svd.cpp  var.cpp
Inception/ChaosCV/src/dnn/layers/vulkan/: abs_vulkan.cpp  binary_op_vulkan.cpp  gemm_vulkan.cpp  permute_vulkan.cpp  reduce_vulkan.cpp  sum_vulkan.cpp
Inception/ChaosCV/src/dnn/layers/vulkan/shaders/: abs.comp  abs_spv_data.hex.hpp  binary_op.comp  gemm.comp  permute.comp  reduce.comp  sum.comp  transpose.comp
Inception/ChaosCV/src/highgui/: highgui.cpp  painter.cpp  window.cpp
Inception/ChaosCV/src/ml/: pca.cpp
Inception/ChaosCV/src/utils/: op.cpp
Tests/: .gitignore  README.md  test_core.cpp
Tests/GTests/: CMakeLists.txt  GTests.vcxproj  GTests.vcxproj.filters  test_array.cpp  test_tensor.cpp  testutil.hpp
Tests/LayerTests/: LayerTests.vcxproj  LayerTests.vcxproj.filters  abs_test.cpp  binary_op_test.cpp  core.hpp  gemm_test.cpp  mean_test.cpp  norm_test.cpp  permute_test.cpp  reduce_test.cpp  sum_test.cpp  svd_test.cpp  var_test.cpp
